--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [template.environment]
-  BOT_TOKEN = "Change me to your Telegram bot token"
+  BOT_TOKEN = "7128645576:AAEZSBgVok15wNELrDKDZEp43-DbsYGFzp8"
